<resources>
    <string name="app_name">MEPE</string>
    <string name="o_museu_titulo">O Museu</string>
    <string name="exposicoes_titulo">Exposições</string>
    <string name="colecoes_titulo">Coleções</string>
    <string name="bibliotecas_titulo">Bibliotecas</string>
    <string name="acontece_titulo">Acontece</string>
    <string name="atividades_titulo">Atividades</string>
    <string name="visite_titulo">Visite</string>
    <string name="contato_titulo">Contato</string>
    <string name="o_museu_conteudo">
    \n O Museu do Estado de Pernambuco - MEPE foi criado em 1929, através do Ato 240, Lei pioneira no Nordeste e no Brasil, que autorizava o Governo a criar uma Inspetoria Estadual de Monumentos Nacionais e um Museu Histórico e de Arte Antiga, a ela subordinado. Em 1930, o Museu instalou-se na cúpula do Palácio da Justiça, na Praça da República, expondo, entre outras peças, a coleção de quadros do pintor pernambucano Telles Júnior.
    \n
    \n Em 1940, o Museu passa a ter suas instalações no Palacete do século XIX, localizado no bairro das Graças, um belo exemplar da arquitetura daquele século, antiga residência do Dr. Augusto Frederico de Oliveira, filho do Barão de Beberibe, onde funciona até hoje como um dos equipamentos culturais do Governo do Estado, gerenciado pela Fundação do Patrimônio Histórico e Artístico de Pernambuco (FUNDARPE), e possui um amplo e variado acervo de peças que constituem referenciais marcantes da história do Estado.
    \n
    \n
    \n <b>INSTALAÇÕES FÍSICAS</b>
    \n
    \n O Museu do Estado de Pernambuco – MEPE ocupa uma área de 9.043 m2, com amplo estacionamento e jardins ornamentados com esculturas e vasos de cerâmica portuguesa. A entrada principal é guardada por dois grifos de bronze: cabeça de águia, corpo de leão e cauda de serpente. Duas estátuas de zuavos, isto é, soldados de infantaria francesa constituída na Argélia, cujo fardamento foi copiado por outras localidades, inclusive pelos voluntários da Pátria baianos que lutaram na Guerra do Paraguai (1865-1870), ladeiam a escadaria que nos leva ao terraço frontal do Museu, onde estão, em mármore, as Musas, que presidem as Artes: Memmosina, da memória e mais 7 das suas 9 filhas com Zeus, que são: Euterpe, da música; Polímmnnia, a musa da retórica; Erato, da poesia; Melpomene, da tragédia; Tália, da comédia; Clio da história; e Calliope, da Epopéia. No terraço lateral um canhão holandês, de bronze, com 3 metros de comprimento e, atrás do Museu 4 canhões da artilharia portuguesa, complementam a coleção de armaria.
    \n
    \n Além do Palacete, o MEPE abrange o Anexo I – Espaço Cícero Dias, com capacidadepara abrigar exposições de médio e grande porte e o Anexo II – uma casa onde são realizados cursos e oficinas de arte.
    \n
    \n Inaugurado em 2003, o Espaço Cícero Dias abriga no térreo, a exposição de longa duração e o auditório Joaquim Cardoso, onde são realizadas palestras, oficinas, debates e outros eventos ligados à cultura. O pavimento superior, além das galerias de exposições temporárias, abriga o Centro de Documentação Cícero Dias – biblioteca especializada em arte e história com mais de quatro mil volumes entre livros, catálogos e periódicos, alguns deles obras raras, como o livro de Gaspar Barlaeus, escrito em latim, que narra a história do governo de Maurício de Nassau em Pernambuco.
    \n
    \n Atualmente o acervo do Museu do Estado possui mais de catorze mil itens, agregando importantes coleções que se distribuem nas seguintes categorias: Arqueologia, Cultura Indígena, Presença Holandesa em Pernambuco, Arte Sacra, Cultura Afro-brasileira, Ex-votos, Iconografia, Mobiliário, Porcelana, Cristais e Pintura com telas de artistas como Cícero Dias, Telles Júnior, Francisco Brennand e Burle Marx.
    \n
    \n O acervo do MEPE é integrado por uma grande diversidade e fragmentação cultural representadas nas seguintes coleções. A coleção do comendador José Ferreira Baltar (1929). A coleção Liceu do Liceu Artes e oficio (1930) que remete ao Brasil Império. A coleção Brás Ribeiro, contendo porcelanas e exemplares de mobiliários do Brasil Colônia e Império. A coleção general Paulo Figueiredo, com material relacionado as civilizações pré-incaicas adquiridas na Bolívia em 1936. A coleção afro-brasileira com itens do culto afro do Xangô em Pernambuco. A coleção Lívio Teixeira contendo ex-votos e a coleção Carlos Estevão (1880-1946) reunindo 3.320 peças doadas ao Estado em 1947. Além dessas, o MEPE conta ainda com as seguintes coleções: Salões de Arte, Coleção Bandepe, Coleção Magdalena Arraes, Queralt, Coleção Roque de Brito Alves e a Coleção José Mariano.
    \n
    \n O Centro de Documentação Especializada em Arte, História, Antropologia e ciências correlatas e aberta ao público, a biblioteca conta com um acervo de cerca de 8.000 títulos, 2.100 catálogos de salões e de exposições individuais e coletivas de artistas plásticos; além de recortes de jornais, vídeos, documentos administrativos e impressos publicados pelo Museu do Estado de Pernambuco. Graças ao intercâmbio com outras instituições serve, também, aos artistas plásticos, informações de exposições, regulamentos e fichas de inscrição de salões de arte a se realizarem no País.
    \n
    </string>
</resources>